--- a/frage1.html
+++ b/frage1.html
@@ -26,11 +26,17 @@
             max-width: 800px;
             width: 100%;
             padding: 40px;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
+            hyphens: auto;
         }
         h1 {
             color: #333;
             margin-bottom: 10px;
             font-size: 2.5em;
+            word-break: break-word;
+            overflow-wrap: break-word;
+            hyphens: auto;
         }
         .question-number {
             color: #667eea;
@@ -43,6 +49,9 @@
             color: #444;
             line-height: 1.6;
             margin-bottom: 20px;
+            word-break: break-word;
+            overflow-wrap: break-word;
+            hyphens: auto;
         }
         .hint {
             background: #f0f4ff;
@@ -51,6 +60,20 @@
             margin-top: 20px;
             border-radius: 5px;
             color: #555;
+            word-break: break-word;
+            overflow-wrap: break-word;
+        }
+        @media (max-width: 600px) {
+            .container {
+                padding: 20px;
+                border-radius: 15px;
+            }
+            h1 {
+                font-size: 1.8em;
+            }
+            .question {
+                font-size: 1.1em;
+            }
         }
     </style>
 </head>
