--- a/frage3.html
+++ b/frage3.html
@@ -26,11 +26,17 @@
             max-width: 800px;
             width: 100%;
             padding: 40px;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
+            hyphens: auto;
         }
         h1 {
             color: #333;
             margin-bottom: 10px;
             font-size: 2.5em;
+            word-break: break-word;
+            overflow-wrap: break-word;
+            hyphens: auto;
         }
         .question-number {
             color: #4facfe;
@@ -43,6 +49,21 @@
             color: #444;
             line-height: 1.6;
             margin-bottom: 20px;
+            word-break: break-word;
+            overflow-wrap: break-word;
+            hyphens: auto;
+        }
+        @media (max-width: 600px) {
+            .container {
+                padding: 20px;
+                border-radius: 15px;
+            }
+            h1 {
+                font-size: 1.8em;
+            }
+            .question {
+                font-size: 1.1em;
+            }
         }
     </style>
 </head>
