--- a/frage3.html
+++ b/frage3.html
@@ -72,8 +72,7 @@
         <div class="question-number">Frage 3</div>
         <h1>Dekubitus</h1>
         <div class="question">
-            Was ist ein Dekubitus?<br><br>
-            Beschreibe die Bedeutung und Ursache.
+            Was ist ein Dekubitus?
         </div>
     </div>
 </body>
