--- a/frage5.html
+++ b/frage5.html
@@ -72,8 +72,7 @@
         <div class="question-number">Frage 5</div>
         <h1>Druckstellen</h1>
         <div class="question">
-            Wo können Druckstellen entstehen?<br><br>
-            Nenne typische gefährdete Körperstellen.
+            Wo können Druckstellen entstehen?
         </div>
     </div>
 </body>
