--- a/frage5.html
+++ b/frage5.html
@@ -45,13 +45,54 @@
             margin-bottom: 30px;
         }
         .question {
-            font-size: 1.3em;
+            font-size: 1.2em;
             color: #444;
-            line-height: 1.6;
-            margin-bottom: 20px;
+            line-height: 1.8;
+            margin-bottom: 30px;
             word-break: break-word;
             overflow-wrap: break-word;
             hyphens: auto;
+        }
+        .instructions {
+            background: #f9f9f9;
+            border-left: 4px solid #fa709a;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+        }
+        .instructions h3 {
+            color: #333;
+            margin-bottom: 10px;
+            font-size: 1.2em;
+        }
+        .instructions ul {
+            margin-left: 20px;
+            line-height: 1.8;
+        }
+        .instructions li {
+            margin-bottom: 8px;
+        }
+        .print-sheet-notice {
+            background: #e3f2fd;
+            border: 2px solid #2196f3;
+            border-radius: 8px;
+            padding: 20px;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        .print-sheet-notice strong {
+            color: #1976d2;
+            font-size: 1.1em;
+        }
+        .scoring {
+            background: #fff3cd;
+            border: 2px solid #ffc107;
+            border-radius: 8px;
+            padding: 15px;
+            margin-top: 20px;
+        }
+        .scoring strong {
+            color: #856404;
         }
         @media (max-width: 600px) {
             .container {
@@ -64,6 +105,20 @@
             .question {
                 font-size: 1.1em;
             }
+            .instructions {
+                padding: 15px;
+            }
+            .instructions h3 {
+                font-size: 1.1em;
+            }
+            .print-sheet-notice {
+                padding: 15px;
+                font-size: 0.95em;
+            }
+            .scoring {
+                padding: 12px;
+                font-size: 0.95em;
+            }
         }
     </style>
 </head>
@@ -71,8 +126,22 @@
     <div class="container">
         <div class="question-number">Frage 5</div>
         <h1>Druckstellen</h1>
+        
         <div class="question">
-            Wo können Druckstellen entstehen?
+            Druckstellen sind ein häufiges Problem bei bettlägerigen oder immobilen Patienten. Sie entstehen durch anhaltenden Druck auf bestimmte Körperstellen, der die Durchblutung behindert und zu Gewebeschäden führt. Die Kenntnis der typischen Entstehungsorte von Druckstellen ist essentiell für die Prävention und richtige Pflege.
+        </div>
+
+        <div class="print-sheet-notice">
+            <strong>Hinweis:</strong><br>
+            Sie erhalten ein separates gedrucktes Blatt mit einer anatomischen Abbildung des menschlichen Körpers.
+        </div>
+
+        <div class="instructions">
+            <h3>Aufgabenstellung:</h3>
+            <ul>
+                <li>Markieren Sie auf dem gedruckten Blatt mit der anatomischen Abbildung alle Stellen, an denen Druckstellen entstehen können.</li>
+                <li>Jede korrekt markierte Druckstelle gibt <strong>4,5 Punkte</strong>. Rechnen sie es aus wie viel Punkte sie haben um die Geheime Zahl zu erhalten.</li>
+            </ul>
         </div>
     </div>
 </body>
