--- a/frage5.html
+++ b/frage5.html
@@ -140,7 +140,7 @@
             <h3>Aufgabenstellung:</h3>
             <ul>
                 <li>Markieren Sie auf dem gedruckten Blatt mit der anatomischen Abbildung alle Stellen, an denen Druckstellen entstehen können.</li>
-                <li>Jede korrekt markierte Druckstelle gibt <strong>4,5 Punkte</strong>. Rechnen sie es aus wie viel Punkte sie haben um die Geheime Zahl zu erhalten.</li>
+                <li>Jede korrekt markierte Druckstelle ergibt <strong>4,5 Punkte</strong>. Rechnen Sie aus, wie viele Punkte Sie erhalten, um die geheime Zahl zu ermitteln.</li>
             </ul>
         </div>
     </div>
