--- a/frage4.html
+++ b/frage4.html
@@ -72,7 +72,7 @@
         <div class="question-number">Frage 4</div>
         <h1>Dekubitus-Stadien</h1>
         <div class="question">
-            Ordne die folgenden Wunden den entsprechenden Dekubitus-Stadien zu.
+            Ordne die Beschreibungen den richtigen Bildern zu.
         </div>
     </div>
 </body>
