--- a/frage2.html
+++ b/frage2.html
@@ -53,6 +53,16 @@
             overflow-wrap: break-word;
             hyphens: auto;
         }
+        .hint {
+            background: #f0f4ff;
+            border-left: 4px solid #f5576c;
+            padding: 15px;
+            margin-top: 20px;
+            border-radius: 5px;
+            color: #555;
+            word-break: break-word;
+            overflow-wrap: break-word;
+        }
         @media (max-width: 600px) {
             .container {
                 padding: 20px;
