--- a/frage3.html
+++ b/frage3.html
@@ -30,6 +30,25 @@
             overflow-wrap: break-word;
             hyphens: auto;
         }
+        .instructions {
+            background: #f9f9f9;
+            border-left: 4px solid #fa709a;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+        }
+        .instructions h3 {
+            color: #333;
+            margin-bottom: 10px;
+            font-size: 1.2em;
+        }
+        .instructions ul {
+            margin-left: 20px;
+            line-height: 1.8;
+        }
+        .instructions li {
+            margin-bottom: 8px;
+        }
         h1 {
             color: #333;
             margin-bottom: 10px;
@@ -73,6 +92,14 @@
         <h1>Dekubitus</h1>
         <div class="question">
             Was ist ein Dekubitus?
+        </div>
+
+        <div class="instructions">
+            <h3>Aufgabenstellung:</h3>
+            <ul>
+                <li>Ergänze den Lückentext.</li>
+                <li>Subtrahiere anschließend die Zahlen, die sich auf der Rückseite der Wörter befinden, in der richtigen Reihenfolge – dann erhaltet ihr den nächsten Hinweis.</li>
+            </ul>
         </div>
     </div>
 </body>
