--- a/frage4.html
+++ b/frage4.html
@@ -38,6 +38,25 @@
             overflow-wrap: break-word;
             hyphens: auto;
         }
+        .instructions {
+            background: #f9f9f9;
+            border-left: 4px solid #fa709a;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+        }
+        .instructions h3 {
+            color: #333;
+            margin-bottom: 10px;
+            font-size: 1.2em;
+        }
+        .instructions ul {
+            margin-left: 20px;
+            line-height: 1.8;
+        }
+        .instructions li {
+            margin-bottom: 8px;
+        }
         .question-number {
             color: #43e97b;
             font-size: 0.9em;
@@ -72,7 +91,13 @@
         <div class="question-number">Frage 4</div>
         <h1>Dekubitus-Stadien</h1>
         <div class="question">
-            Ordne die Beschreibungen den richtigen Bildern zu.
+            Welches sind die Dekubitus Stadien?
+        </div>
+        <div class="instructions">
+            <h3>Aufgabenstellung:</h3>
+            <ul>
+                <li>Ordnet die Beschreibungen den passenden Bildern der Dekubitus-Stadien zu.</li>
+            </ul>
         </div>
     </div>
 </body>
