--- a/frage2.html
+++ b/frage2.html
@@ -82,7 +82,12 @@
         <div class="question-number">Frage 2</div>
         <h1>Wundarten</h1>
         <div class="question">
-            Ordne die verschiedenen Wundarten den richtigen Bereichen zu.
+            Ordne die Bezeichnungen der Wundarten den passenden Bildkarten zu.<br><br>
+            Jedes richtige Paar ergibt ein kleines Teil des nächsten Hinweises.
+        </div>
+        <div class="hint">
+            💡 Tipp: Die Paare gehören zusammen – achte auf die Wundart und das Bild.<br>
+            Jede Rückseite führt euch einen Schritt näher zum Code.
         </div>
     </div>
 </body>
